--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "^6.1.0",
     "@react-pdf/renderer": "^4.3.2",
+    "@vercel/blob": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "lucide-react": "^0.468.0",
