--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-pdf/renderer": "^4.3.2",
     "@vercel/blob": "^2.0.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.468.0",
     "next": "^16.1.1",
