--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.0",
+    "html2pdf.js": "^0.13.0",
     "lucide-react": "^0.468.0",
     "next": "^16.1.1",
     "next-auth": "^4.24.0",
