--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^16.1.1",
     "next-auth": "^4.24.0",
     "pdf-lib": "^1.17.1",
+    "puppeteer": "^24.34.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
