--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "^6.1.0",
     "@react-pdf/renderer": "^4.3.2",
+    "@sparticuz/chromium": "^143.0.4",
     "@vercel/blob": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.8.0",
@@ -23,7 +24,7 @@
     "next": "^16.1.1",
     "next-auth": "^4.24.0",
     "pdf-lib": "^1.17.1",
-    "puppeteer": "^24.34.0",
+    "puppeteer-core": "^24.34.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
