--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
   "dependencies": {
     "@prisma/client": "^6.1.0",
     "@react-pdf/renderer": "^4.3.2",
-    "@sparticuz/chromium": "^143.0.4",
     "@vercel/blob": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.468.0",
     "next": "^16.1.1",
     "next-auth": "^4.24.0",
     "pdf-lib": "^1.17.1",
-    "puppeteer-core": "^24.34.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
