--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nanoid": "^5.1.6",
     "next": "^16.1.1",
     "next-auth": "^4.24.0",
+    "openai": "^6.25.0",
     "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
